--- a/src/main.scss
+++ b/src/main.scss
@@ -1,9 +1,4 @@
-/*@font-face {*/
-/*  font-family: 'Inter';*/
-/*  src: local('Inter'),*/
-/*  url('./assets/fonts/Inter-VariableFont_slnt,wght.ttf') format('truetype');*/
-/*  font-style: normal;*/
-/*}*/
+@import "styles/mixins";
 
 * {
   margin: 0;
