--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,7 +4,14 @@ $desktop-width: 992px;
 
 //COLORS
 $white: #ffffff;
+$semi-white-color: #e7e7e7;
 $main-orange-color: #FA614A;
+$dark-text-color: #1c1c1e;
+$gray-text-color: #6c6c6c;
+$gray-background: #ececec;
+$main-blue-color: #317EB0;
+$dark-blue-color: #03318c;
+$light-gray-color: #c4c4c4;
 
 //FONTS
 $main-font: 'HelveticaNeurCyr', sans-serif;
