--- a/src/components/FreeDelivery/FreeDelivery.module.scss
+++ b/src/components/FreeDelivery/FreeDelivery.module.scss
@@ -1,12 +1,37 @@
 @import "../../styles/mixins";
 
 .freeDelivery {
+  padding: 16px;
 
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  border-radius: 5px;
+
+  box-shadow: 0 2px 5px 0 rgba(38, 53, 104, 0.25);
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  &__title {
+    @include BlockTitle;
+  }
 }
+
 
 @include mobile-width {
   .freeDelivery {
+    margin-top: 14px;
 
+    gap: 16px;
+
+    &__content {
+      gap: 24px;
+    }
   }
 }
 
