--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "modal";
 
 //MEDIA
 @mixin mobile-width {
@@ -18,18 +19,171 @@
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
+
   @content;
 }
 
 //TEXT
 @mixin MainTitle {
   font-family: $main-font;
+  font-weight: 550;
 
   @include mobile-width {
+    font-size: 24px;
+    color: $white;
 
+    @content;
   }
 
   @include desktop-width {
+    font-size: 30px;
+    color: $dark-text-color;
 
+    @content;
   }
+
+  @content;
+}
+
+@mixin MainSubtitle {
+  font-family: $support-font;
+  font-weight: 400;
+  line-height: normal;
+
+  @include mobile-width {
+    font-size: 18px;
+    color: $white;
+
+    @content;
+  }
+
+  @include desktop-width {
+    font-size: 24px;
+    color: $dark-text-color;
+
+    @content;
+  }
+
+  @content;
+}
+
+@mixin BlockTitle {
+  font-family: $main-font;
+  font-weight: 550;
+  line-height: normal;
+  color: $dark-text-color;
+
+  @include mobile-width {
+    font-size: 17px;
+
+    @content;
+  }
+
+  @include desktop-width {
+    font-size: 30px;
+
+    @content;
+  }
+
+  @content;
+}
+
+@mixin ContentTitle {
+  font-family: $main-font;
+  line-height: normal;
+  color: $dark-text-color;
+
+  @include mobile-width {
+    font-size: 14px;
+    font-weight: 400;
+
+    @content;
+  }
+
+  @include desktop-width {
+    font-size: 18px;
+    font-weight: 550;
+
+    @content;
+  }
+
+  @content;
+}
+
+@mixin ContentSubtitle {
+  font-family: $support-font;
+  font-weight: 400;
+  line-height: normal;
+  color: $gray-text-color;
+
+  @include mobile-width {
+    font-size: 13px;
+
+    @content;
+  }
+
+  @include desktop-width {
+    font-size: 15px;
+
+    @content;
+  }
+
+  @content;
+}
+
+//UI
+@mixin ButtonMain {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: $main-orange-color;
+
+  font-family: $main-font;
+  font-weight: 700;
+  line-height: normal;
+  color: $white;
+
+  @include mobile-width {
+    height: 48px;
+
+    border-radius: 5px;
+
+    font-size: 20px;
+
+    @content;
+  }
+
+  @include desktop-width {
+    height: 56px;
+
+    border-radius: 10px;
+
+    font-size: 26px;
+
+    @content;
+  }
+
+  @content;
+}
+
+@mixin ScrollBar {
+  &::-webkit-scrollbar {
+    height: 1px; /* height of the entire scrollbar */
+    width: 1px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent; /* color of the tracking area */
+
+    border-radius: 50%; /* roundness of the scroll track */
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $main-blue-color; /* color of the scroll thumb */
+    border-radius: 50%; /* roundness of the scroll thumb */
+    border: 3px solid $main-blue-color; /* creates padding around scroll thumb */
+  }
+
+  @content;
 }
