--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,6 +12,7 @@ $gray-background: #ececec;
 $main-blue-color: #317EB0;
 $dark-blue-color: #03318c;
 $light-gray-color: #c4c4c4;
+$light-blue-color: rgba(24,144,255,.7);
 
 //FONTS
 $main-font: 'HelveticaNeurCyr', sans-serif;
