--- a/src/components/Modals/AuthModal/AuthModal.module.scss
+++ b/src/components/Modals/AuthModal/AuthModal.module.scss
@@ -28,7 +28,7 @@
   &__content {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     justify-content: center;
 
     max-width: 90%;
@@ -81,7 +81,7 @@
 .content {
 
   &__changePhoneBtn {
-    margin-top: 20px;
+    margin-top: 16px;
 
     background-color: transparent;
 
