--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,7 @@ $semi-white-color: #e7e7e7;
 $main-orange-color: #FA614A;
 $dark-text-color: #1c1c1e;
 $gray-text-color: #6c6c6c;
+$darker-gray-text-color: rgb(90, 90, 90);
 $gray-background: #ececec;
 $main-blue-color: #317EB0;
 $dark-blue-color: #03318c;
