--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -5,11 +5,36 @@
 }
 
 .accordions {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 
+  &__text {
+    @include ContentSubtitle;
+  }
+
+  &__link {
+    text-decoration: underline;
+    text-underline-offset: 3px;
+
+    background-color: transparent;
+
+    @include ContentSubtitle;
+
+    &:disabled {
+      text-decoration: none;
+    }
+  }
+
+  &__linkActive {
+    color: #000;
+  }
 }
 
 .copyright {
-
+  font-family: $support-font;
+  color: $gray-text-color;
+  font-weight: 400;
 }
 
 @include mobile-width {
@@ -20,15 +45,35 @@
 
   .accordions {
     margin-top: 20px;
+
+    gap: 16px;
+
+    &__text {
+      font-size: 12px;
+    }
   }
 
   .copyright {
     margin-top: 12px;
+
+    font-size: 12px;
+    line-height: 20px;
   }
 }
 
 @include desktop-width {
   .footer {
 
+  }
+
+  .accordions {
+
+    &__link {
+      cursor: pointer;
+
+      &:disabled {
+        cursor: default;
+      }
+    }
   }
 }
