--- a/src/components/GetCreditCard/GetCreditCard.module.scss
+++ b/src/components/GetCreditCard/GetCreditCard.module.scss
@@ -19,6 +19,8 @@
   flex-direction: column;
   align-items: flex-start;
 
+  background-color: $white;
+
   &__title {
     @include BlockTitle;
   }
@@ -34,7 +36,7 @@
   box-shadow: inset 0 -15px 12px #fff;
 
   @include BackgroundImage {
-    background-size: 100%;
+    background-size: cover;
     background-position: 100% 0;
   };
 }
@@ -52,7 +54,7 @@
     padding: 12px;
 
     &__title {
-
+      line-height: 17px;
     }
 
     &__subtitle {
