--- a/src/components/Inputs/Input.module.scss
+++ b/src/components/Inputs/Input.module.scss
@@ -6,6 +6,7 @@
   width: 100%;
 
   display: flex;
+  flex-direction: column;
   justify-content: flex-start;
 }
 
@@ -20,6 +21,9 @@
   box-shadow: 0 2px 6px rgba(38,53,104,.25);;
 
   border-radius: 8px;
+
+  font-family: $support-font;
+  color: $input-gray-text-color;
 
   transition: background-color .3s ease-in-out;
 
@@ -42,6 +46,12 @@
 
 }
 
+.label {
+  padding: 0 0 4px 8px;
+
+  @include labelText;
+}
+
 @include mobile-width {
   .inputContainer {
 
@@ -49,6 +59,8 @@
 
   .input {
     height: 50px;
+
+    font-size: 16px;
   }
 }
 
