--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -131,6 +131,28 @@
   @content;
 }
 
+@mixin labelText {
+  font-family: $support-font;
+  font-weight: 400;
+  line-height: 17px;
+  white-space: pre-wrap;
+  color: #000;
+
+  @include mobile-width {
+    font-size: 13px;
+
+    @content;
+  }
+
+  @include desktop-width {
+    font-size: 16px;
+
+    @content;
+  }
+
+  @content;
+}
+
 //UI
 @mixin ButtonMain {
   display: flex;
