--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,6 +14,8 @@ $main-blue-color: #317EB0;
 $dark-blue-color: #03318c;
 $light-gray-color: #c4c4c4;
 $light-blue-color: rgba(24,144,255,.7);
+$input-gray-text-color: hsla(0,0%,39%,.9);
+$support-gray-text-color: #8d8d8d;
 
 //FONTS
 $main-font: 'HelveticaNeurCyr', sans-serif;
