--- a/src/shared/Accordion/Accordion.module.scss
+++ b/src/shared/Accordion/Accordion.module.scss
@@ -66,6 +66,22 @@
   .accordion {
     gap: 0;
 
+    &:first-child {
+
+      &::after {
+        content: '';
+
+        margin-top: 16px;
+
+        width: 100%;
+        height: 2px;
+
+        background-color: $gray-background;
+
+        border-radius: 10px;
+      }
+    }
+
     &__active {
       gap: 10px;
     }
