--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -1,11 +1,17 @@
 @import "../../styles/mixins";
 
 .banner {
+  position: relative;
+
   display: flex;
   flex-direction: column;
 }
 
 .content {
+  position: absolute;
+
+  box-sizing: border-box;
+
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -24,20 +30,18 @@
 }
 
 .btnSubmit {
+  position: absolute;
+
   display: flex;
   align-items: center;
   justify-content: center;
 
   background-color: $main-orange-color;
-
-  border-radius: 5px;
 }
 
 @include mobile-width {
   .banner {
-    padding: 20px 16px 15px;
-
-    height: 269px;
+    height: 305px;
 
     border-bottom: 1px solid $white;
 
@@ -46,7 +50,9 @@
   }
 
   .content {
-    height: 100%;
+    bottom: 100px;
+    left: 12px;
+    right: 12px;
 
     justify-content: flex-end;
     gap: 12px;
@@ -69,15 +75,17 @@
 
     background-image: linear-gradient(180deg,hsla(0,0%,77%,0) 64.18%,#fff 89.06%);
 
-    border-bottom: 1px solid $white;
-
     &__img {
       position: absolute;
+
+      right: 0;
     }
   }
 
   .btnSubmit {
-    margin-top: 40px;
+    bottom: 5%;
+    left: 20px;
+    right: 20px;
 
     min-height: 48px;
 
