--- a/src/components/PopularProducts/PopularProducts.module.scss
+++ b/src/components/PopularProducts/PopularProducts.module.scss
@@ -17,6 +17,8 @@
 
   border-radius: 5px;
 
+  box-shadow: 5px 5px 5px rgba(38,53,104,.25);
+
   background-color: $gray-background;
   background-image: var(--legacy, linear-gradient(180deg, #F8F8F8 0%, #FFF 36.46%));
   filter: drop-shadow(5px 5px 5px rgba(38, 53, 104, 0.25));
