--- a/src/components/GetCreditCard/GetCreditCard.module.scss
+++ b/src/components/GetCreditCard/GetCreditCard.module.scss
@@ -26,8 +26,8 @@
   }
 
   &__subtitle {
-    font-family: $main-font;
-    color: $darker-gray-text-color;
+    font-family: $sobank-main-font;
+    color: $sobank-darker-gray-text-color;
     font-weight: normal;
   }
 }
