--- a/src/shared/Accordion/Accordion.module.scss
+++ b/src/shared/Accordion/Accordion.module.scss
@@ -76,7 +76,7 @@
         width: 100%;
         height: 2px;
 
-        background-color: $gray-background;
+        background-color: $sobank-gray-background;
 
         border-radius: 10px;
       }
