--- a/src/components/Advantages/Advantages.module.scss
+++ b/src/components/Advantages/Advantages.module.scss
@@ -2,8 +2,6 @@
 
 .advantages {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
 
   &__title {
     @include BlockTitle;
@@ -21,6 +19,15 @@
 
     box-sizing: border-box;
     box-shadow: 0 2px 5px 0 rgba(38, 53, 104, 0.25);
+  }
+
+  &__sobank {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  &__sobankRedesign {
+
   }
 }
 
