--- a/src/components/CounterItem/CounterItem.module.scss
+++ b/src/components/CounterItem/CounterItem.module.scss
@@ -17,10 +17,10 @@
   }
 
   &__text {
-    font-family: $main-font;
+    font-family: $sobank-main-font;
     font-weight: 400;
     line-height: normal;
-    color: $dark-text-color;
+    color: $sobank-dark-text-color;
   }
 }
 
@@ -34,7 +34,7 @@
       min-width: 27px;
       min-height: 26px;
 
-      border: 2px solid $main-blue-color;
+      border: 2px solid $sobank-main-blue-color;
     }
 
     &__text {
@@ -54,7 +54,7 @@
       width: 46px;
       height: 46px;
 
-      border: 4px solid $main-blue-color;
+      border: 4px solid $sobank-main-blue-color;
     }
 
     &__text {
