--- a/src/components/Inputs/Input.module.scss
+++ b/src/components/Inputs/Input.module.scss
@@ -22,8 +22,8 @@
 
   border-radius: 8px;
 
-  font-family: $support-font;
-  color: $input-gray-text-color;
+  font-family: $sobank-support-font;
+  color: $sobank-input-gray-text-color;
 
   transition: background-color .3s ease-in-out;
 
