--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -24,178 +24,182 @@
 }
 
 //TEXT
-@mixin MainTitle {
-  font-family: $main-font;
-  font-style: normal;
-  font-weight: 550;
-
-  @include mobile-width {
-    font-size: 24px;
-    line-height: 24px;
-    color: $white;
-
-    @content;
+@mixin MainTitle($selector, $ff, $fs, $lh, $fw, $color) {
+  #{$selector} {
+    font-family: $ff;
+    font-style: normal;
+    font-size: $fs;
+    line-height: $lh;
+    font-weight: $fw;
+    color: $color;
   }
-
-  @include desktop-width {
-    font-size: 30px;
-    color: $dark-text-color;
-
-    @content;
-  }
-
-  @content;
 }
 
 @mixin MainSubtitle {
-  font-family: $support-font;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+  &__sobank {
+    font-family: $sobank-support-font;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 
-  @include mobile-width {
-    font-size: 18px;
-    color: $white;
+    @include mobile-width {
+      font-size: 18px;
+      color: $white;
+
+      @content;
+    }
+
+    @include desktop-width {
+      font-size: 24px;
+      color: $sobank-dark-text-color;
+
+      @content;
+    }
 
     @content;
   }
 
-  @include desktop-width {
-    font-size: 24px;
-    color: $dark-text-color;
+  &__sobankRedesign {
 
-    @content;
   }
-
-  @content;
 }
 
 @mixin BlockTitle {
-  font-family: $main-font;
-  font-weight: 550;
-  font-style: normal;
-  line-height: normal;
-  color: $dark-text-color;
+  &__sobank {
+    font-family: $sobank-main-font;
+    font-weight: 550;
+    font-style: normal;
+    line-height: normal;
+    color: $sobank-dark-text-color;
 
-  @include mobile-width {
-    font-size: 17px;
+    @include mobile-width {
+      font-size: 17px;
+
+      @content;
+    }
+
+    @include desktop-width {
+      font-size: 30px;
+
+      @content;
+    }
 
     @content;
   }
 
-  @include desktop-width {
-    font-size: 30px;
+  &__sobankRedesign {}
+}
 
-    @content;
+@mixin BlockSubtitle($selector, $ff, $color, $fs, $lh, $fw) {
+  #{$selector} {
+    font-family: $ff;
+    font-size: $fs;
+    line-height: $lh;
+    font-weight: $fw;
+    color: $color;
   }
-
-  @content;
 }
 
 @mixin ContentTitle {
-  font-family: $main-font;
-  line-height: normal;
-  font-style: normal;
-  color: $dark-text-color;
+  &__sobank {
+    font-family: $sobank-main-font;
+    line-height: normal;
+    font-style: normal;
+    color: $sobank-dark-text-color;
 
-  @include mobile-width {
-    font-size: 14px;
-    font-weight: 400;
+    @include mobile-width {
+      font-size: 14px;
+      font-weight: 400;
+
+      @content;
+    }
+
+    @include desktop-width {
+      font-size: 18px;
+      font-weight: 550;
+
+      @content;
+    }
 
     @content;
   }
 
-  @include desktop-width {
-    font-size: 18px;
-    font-weight: 550;
-
-    @content;
-  }
-
-  @content;
+  &__sobankRedesign {}
 }
 
 @mixin ContentSubtitle {
-  font-family: $support-font;
-  font-weight: 400;
-  line-height: normal;
-  font-style: normal;
-  color: $gray-text-color;
+  &__sobank {
+    font-family: $sobank-support-font;
+    font-weight: 400;
+    line-height: normal;
+    font-style: normal;
+    color: $sobank-gray-text-color;
 
-  @include mobile-width {
-    font-size: 13px;
+    @include mobile-width {
+      font-size: 13px;
+
+      @content;
+    }
+
+    @include desktop-width {
+      font-size: 15px;
+
+      @content;
+    }
 
     @content;
   }
 
-  @include desktop-width {
-    font-size: 15px;
-
-    @content;
-  }
-
-  @content;
+  &__sobannkRedesign {}
 }
 
 @mixin labelText {
-  font-family: $support-font;
-  font-weight: 400;
-  line-height: 17px;
-  white-space: pre-wrap;
-  color: #000;
+  &__sobank {
+    font-family: $sobank-support-font;
+    font-weight: 400;
+    line-height: 17px;
+    white-space: pre-wrap;
+    color: #000;
 
-  @include mobile-width {
-    font-size: 13px;
+    @include mobile-width {
+      font-size: 13px;
+
+      @content;
+    }
+
+    @include desktop-width {
+      font-size: 16px;
+
+      @content;
+    }
 
     @content;
   }
 
-  @include desktop-width {
-    font-size: 16px;
-
-    @content;
-  }
-
-  @content;
+  &__sobankRedesign {}
 }
 
 //UI
-@mixin ButtonMain {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+@mixin ButtonMain($selector, $bg, $color, $ff, $fs, $lh, $fw, $height, $br) {
+  #{$selector} {
+    height: $height;
 
-  background-color: $main-orange-color;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-  font-family: $main-font;
-  font-weight: 700;
-  line-height: normal;
-  color: $white;
+    background-color: $bg;
 
-  @include mobile-width {
-    height: 48px;
+    border-radius: $br;
 
-    border-radius: 5px;
-
-    font-size: 20px;
-
-    @content;
+    font-family: $ff;
+    font-size: $fs;
+    line-height: $lh;
+    font-weight: $fw;
   }
-
-  @include desktop-width {
-    height: 56px;
-
-    border-radius: 10px;
-
-    font-size: 26px;
-
-    @content;
-  }
-
-  @content;
 }
 
-@mixin ScrollBar {
+@mixin ScrollBar($color) {
   &::-webkit-scrollbar {
     height: 1px; /* height of the entire scrollbar */
     width: 1px;
@@ -208,10 +212,30 @@
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: $main-blue-color; /* color of the scroll thumb */
+    background-color: $color; /* color of the scroll thumb */
     border-radius: 50%; /* roundness of the scroll thumb */
-    border: 3px solid $main-blue-color; /* creates padding around scroll thumb */
+    border: 3px solid $color; /* creates padding around scroll thumb */
   }
+}
 
-  @content;
+@mixin Arrow($selector, $color, $rotate, $width, $height) {
+  #{$selector} {
+    &::after {
+      content: '';
+
+      position: absolute;
+      right: 0;
+      top: 50%;
+
+      width: $width;
+      height: $height;
+
+      background-color: $color;
+
+      transform: translateY(50%);
+      rotate: $rotate;
+
+      clip-path: polygon(50% 0, 100% 100%, 0 100%);
+    }
+  }
 }
