--- a/src/components/GetCreditCard/GetCreditCard.module.scss
+++ b/src/components/GetCreditCard/GetCreditCard.module.scss
@@ -22,7 +22,7 @@
   background-color: $white;
 
   &__title {
-    @include BlockTitle;
+    @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
   }
 
   &__subtitle {
