--- a/src/shared/Accordion/Accordion.module.scss
+++ b/src/shared/Accordion/Accordion.module.scss
@@ -19,7 +19,7 @@
 
     background-color: transparent;
 
-    @include BlockTitle;
+    @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
   }
 }
 
@@ -36,7 +36,7 @@
   transform-origin: top;
   transition: all .5s ease-in-out;
 
-  @include ContentSubtitle;
+  @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
 
   &__active {
     max-height: none;
