--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -24,7 +24,7 @@
 }
 
 //TEXT
-@mixin MainTitle($selector, $ff, $fs, $lh, $fw, $color) {
+@mixin MainText($selector, $ff, $fs, $lh, $fw, $color) {
   #{$selector} {
     font-family: $ff;
     font-style: normal;
@@ -33,150 +33,6 @@
     font-weight: $fw;
     color: $color;
   }
-}
-
-@mixin MainSubtitle {
-  &__sobank {
-    font-family: $sobank-support-font;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-
-    @include mobile-width {
-      font-size: 18px;
-      color: $white;
-
-      @content;
-    }
-
-    @include desktop-width {
-      font-size: 24px;
-      color: $sobank-dark-text-color;
-
-      @content;
-    }
-
-    @content;
-  }
-
-  &__sobankRedesign {
-
-  }
-}
-
-@mixin BlockTitle {
-  &__sobank {
-    font-family: $sobank-main-font;
-    font-weight: 550;
-    font-style: normal;
-    line-height: normal;
-    color: $sobank-dark-text-color;
-
-    @include mobile-width {
-      font-size: 17px;
-
-      @content;
-    }
-
-    @include desktop-width {
-      font-size: 30px;
-
-      @content;
-    }
-
-    @content;
-  }
-
-  &__sobankRedesign {}
-}
-
-@mixin BlockSubtitle($selector, $ff, $color, $fs, $lh, $fw) {
-  #{$selector} {
-    font-family: $ff;
-    font-size: $fs;
-    line-height: $lh;
-    font-weight: $fw;
-    color: $color;
-  }
-}
-
-@mixin ContentTitle {
-  &__sobank {
-    font-family: $sobank-main-font;
-    line-height: normal;
-    font-style: normal;
-    color: $sobank-dark-text-color;
-
-    @include mobile-width {
-      font-size: 14px;
-      font-weight: 400;
-
-      @content;
-    }
-
-    @include desktop-width {
-      font-size: 18px;
-      font-weight: 550;
-
-      @content;
-    }
-
-    @content;
-  }
-
-  &__sobankRedesign {}
-}
-
-@mixin ContentSubtitle {
-  &__sobank {
-    font-family: $sobank-support-font;
-    font-weight: 400;
-    line-height: normal;
-    font-style: normal;
-    color: $sobank-gray-text-color;
-
-    @include mobile-width {
-      font-size: 13px;
-
-      @content;
-    }
-
-    @include desktop-width {
-      font-size: 15px;
-
-      @content;
-    }
-
-    @content;
-  }
-
-  &__sobannkRedesign {}
-}
-
-@mixin labelText {
-  &__sobank {
-    font-family: $sobank-support-font;
-    font-weight: 400;
-    line-height: 17px;
-    white-space: pre-wrap;
-    color: #000;
-
-    @include mobile-width {
-      font-size: 13px;
-
-      @content;
-    }
-
-    @include desktop-width {
-      font-size: 16px;
-
-      @content;
-    }
-
-    @content;
-  }
-
-  &__sobankRedesign {}
 }
 
 //UI
@@ -196,6 +52,8 @@
     font-size: $fs;
     line-height: $lh;
     font-weight: $fw;
+
+    color: $color;
   }
 }
 
