--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -1,92 +1,136 @@
 @import "../../styles/mixins";
 
 .banner {
-  position: relative;
+  &__sobank {
+    position: relative;
 
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__sobankRedesign {
+
+  }
 }
 
 .content {
-  position: absolute;
+  &__sobank {
+    position: absolute;
 
-  box-sizing: border-box;
+    box-sizing: border-box;
 
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  &__sobankRedesign {
+
+  }
 }
 
 .imgContainer {
-  position: absolute;
+  &__sobank {
+    position: absolute;
+  }
+
+  &__sobankRedesign {
+
+  }
 }
 
 .btnSubmit {
-  position: absolute;
+  &__sobank {
+    position: absolute;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-  background-color: $sobank-main-orange-color;
+    background-color: $sobank-main-orange-color;
+  }
+
+  &__sobankRedesign {
+
+  }
 }
 
 @include mobile-width {
   .banner {
-    height: 305px;
+    &__sobank {
+      height: 305px;
 
-    border-bottom: 1px solid $white;
+      border-bottom: 1px solid $white;
 
-    background-color: $white;
-    background-image: linear-gradient(270.29deg, rgb(250, 97, 74) 16.04%, rgba(250, 97, 74, 0.5) 65.38%);
+      background-color: $white;
+      background-image: linear-gradient(270.29deg, rgb(250, 97, 74) 16.04%, rgba(250, 97, 74, 0.5) 65.38%);
+    }
   }
 
   .content {
-    bottom: 100px;
-    left: 12px;
-    right: 12px;
+    &__sobank {
+      bottom: 100px;
+      left: 12px;
+      right: 12px;
 
-    justify-content: flex-end;
-    gap: 12px;
+      justify-content: flex-end;
+      gap: 12px;
 
 
-    &__title {
-      white-space: pre-wrap;
+      &__title {
+        white-space: pre-wrap;
 
-      @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
+        @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
+      }
+
+      &__subtitle {
+        white-space: pre-wrap;
+
+        @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
+      }
     }
 
-    &__subtitle {
-      white-space: pre-wrap;
+    &__sobankRedesign {
 
-      @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
     }
   }
 
   .imgContainer {
-    top: 0;
-    left: 0;
+    &__sobank {
+      top: 0;
+      left: 0;
 
-    width: 100%;
-    height: 305px;
+      width: 100%;
+      height: 305px;
 
-    background-image: linear-gradient(180deg,hsla(0,0%,77%,0) 64.18%,#fff 89.06%);
+      background-image: linear-gradient(180deg,hsla(0,0%,77%,0) 64.18%,#fff 89.06%);
 
-    &__img {
-      position: absolute;
+      &__img {
+        position: absolute;
 
-      right: 0;
+        right: 0;
+      }
+    }
+
+    &__sobankRedesign {
+
     }
   }
 
   .btnSubmit {
-    bottom: 5%;
-    left: 20px;
-    right: 20px;
+    &__sobank {
+      bottom: 5%;
+      left: 20px;
+      right: 20px;
 
-    min-height: 48px;
+      min-height: 48px;
 
-    z-index: 2;
+      z-index: 2;
+    }
+
+    &__sobankRedesign {
+
+    }
   }
 }
 
@@ -96,9 +140,14 @@
   }
 
   .content {
+    &__sobank {
+      &__title {
+        @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
+      }
+    }
 
-    &__title {
-      @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
+    &__sobankRedesign {
+
     }
   }
 }
