--- a/src/components/Socials/Socials.module.scss
+++ b/src/components/Socials/Socials.module.scss
@@ -21,19 +21,23 @@
   &__sobankRedesign {
     padding: 0 28px;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 16px;
+    display: grid;
+    grid-template-rows: repeat(1, 1fr);
 
     &__title {
       text-align: center;
+      white-space: pre-wrap;
 
-      @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
+      @include MainText('&', $redesign-main-font, 16px, normal, 400, $redesign-black);
     }
 
     &__subtitle {
-      display: none;
+      margin-top: 48px;
+
+      text-align: center;
+      white-space: pre-wrap;
+
+      @include MainText('&', $redesign-main-font, 16px, normal, 400, $redesign-black);
     }
   }
 }
@@ -48,11 +52,29 @@
   }
 
   &__sobankRedesign {
+    margin-top: 16px;
+
+    position: relative;
+
+    grid-row: 2/2;
+
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     gap: 32px;
+
+    &::after {
+      content: '';
+
+      position: absolute;
+      top: 56px;
+
+      width: calc(100vw - 32px);
+      height: 1px;
+
+      background-color: #E8F0F6;
+    }
   }
 }
 
@@ -77,6 +99,7 @@
   }
 
   &__sobankRedesign {
+
 
   }
 }
