--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -9,7 +9,14 @@
   }
 
   &__sobankRedesign {
+    display: flex;
+    flex-direction: column;
 
+    position: relative;
+
+    background-color: $redesign-gray-1;
+
+    border-radius: 30px;
   }
 }
 
@@ -25,7 +32,10 @@
   }
 
   &__sobankRedesign {
+    position: absolute;
 
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -35,7 +45,19 @@
   }
 
   &__sobankRedesign {
+    width: 100%;
+    height: 279px;
 
+    position: relative;
+
+    &__img {
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
@@ -48,10 +70,18 @@
     justify-content: center;
 
     background-color: $sobank-main-orange-color;
+
+    border-radius: 10px;
   }
 
   &__sobankRedesign {
+    position: absolute;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: $redesign-blue_1;
   }
 }
 
@@ -64,6 +94,12 @@
 
       background-color: $white;
       background-image: linear-gradient(270.29deg, rgb(250, 97, 74) 16.04%, rgba(250, 97, 74, 0.5) 65.38%);
+    }
+
+    &__sobankRedesign {
+      margin: 56px 0 40px;
+
+      height: 499px;
     }
   }
 
@@ -91,7 +127,21 @@
     }
 
     &__sobankRedesign {
+      top: 279px;
+      left: 16px;
+      right: 16px;
 
+      gap: 8px;
+
+      text-align: center;
+
+      &__title {
+        @include MainText('&', $redesign-main-font, 20px, 28px, 700, $redesign-black);
+      }
+
+      &__subtitle {
+        @include MainText('&', $redesign-main-font, 16px, 24px, 400, $redesign-gray-2);
+      }
     }
   }
 
@@ -129,7 +179,11 @@
     }
 
     &__sobankRedesign {
+      bottom: 24px;
+      left: 16px;
+      right: 16px;
 
+      min-height: 60px;
     }
   }
 }
