--- a/src/components/Exchange/Exchange.module.scss
+++ b/src/components/Exchange/Exchange.module.scss
@@ -1,21 +1,27 @@
 @import "../../styles/mixins";
 
 .exchange {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-
-  &__header {
+  &__sobank {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+
+    &__header {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__title {
+      @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
+    }
+
+    &__subtitle {
+      @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
+    }
   }
 
-  &__title {
-    @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
-  }
-
-  &__subtitle {
-    @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
+  &__sobankRedesign {
+    display: none;
   }
 }
 
