--- a/src/components/Inputs/Input.module.scss
+++ b/src/components/Inputs/Input.module.scss
@@ -1,40 +1,66 @@
 @import "../../styles/mixins";
 
 .inputContainer {
-  position: relative;
+  &__sobank {
+    position: relative;
 
-  width: 100%;
+    width: 100%;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  &__sobankRedesign {
+    padding: 16px;
+
+    width: 100%;
+    height: 50px;
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+
+    box-sizing: border-box;
+
+    background-color: $redesign-gray-1;
+  }
 }
 
 .input {
-  padding: 10px;
+  &__sobank {
+    padding: 10px;
 
-  width: 100%;
+    width: 100%;
 
-  box-sizing: border-box;
+    box-sizing: border-box;
 
-  background-color: rgba(3, 49, 140, 0.12);;
-  box-shadow: 0 2px 6px rgba(38,53,104,.25);;
+    background-color: rgba(3, 49, 140, 0.12);;
+    box-shadow: 0 2px 6px rgba(38,53,104,.25);;
 
-  border-radius: 8px;
+    border-radius: 8px;
 
-  font-family: $sobank-support-font;
-  color: $sobank-input-gray-text-color;
-
-  transition: background-color .3s ease-in-out;
-
-  &:focus {
-    padding: 8px;
-
-    border: 2px solid #000;
-
-    background-color: $white;
+    font-family: $sobank-support-font;
+    color: $sobank-input-gray-text-color;
 
     transition: background-color .3s ease-in-out;
+
+    &:focus {
+      padding: 8px;
+
+      border: 2px solid #000;
+
+      background-color: $white;
+
+      transition: background-color .3s ease-in-out;
+    }
+  }
+
+  &__sobankRedesign {
+    width: 100%;
+    height: 100%;
+
+    background-color: transparent;
   }
 }
 
@@ -47,20 +73,27 @@
 }
 
 .label {
-  padding: 0 0 4px 8px;
+  &__sobank {
+    padding: 0 0 4px 8px;
 
-  @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
+    @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
+  }
 }
 
 @include mobile-width {
   .inputContainer {
 
+    &__sobankRedesign {
+      border-radius: 5px;
+    }
   }
 
   .input {
-    height: 50px;
+    &__sobank {
+      height: 50px;
 
-    font-size: 16px;
+      font-size: 16px;
+    }
   }
 }
 
