--- a/src/components/MobileMenu/MobileMenu.module.scss
+++ b/src/components/MobileMenu/MobileMenu.module.scss
@@ -71,11 +71,15 @@
     border-radius: 30px;
 
     transform: translateY(100%);
-    transition: transform .3s ease-in-out;
+    transform-origin: bottom;
+    scale: 1 0;
+    transition: all .3s ease-in-out;
 
     &__opened {
       transform: translateY(0);
-      transition: transform .3s ease-in-out;
+      transform-origin: top;
+      scale: 1;
+      transition: all .3s ease-in-out;
     }
   }
 }
