--- a/src/components/OurServices/OurServices.module.scss
+++ b/src/components/OurServices/OurServices.module.scss
@@ -1,27 +1,33 @@
 @import "../../styles/mixins";
 
 .outServices {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-
-  &__title {
-    @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
-  }
-
-  &__list {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-
-  &__item {
-    width: 100%;
-
+  &__sobank {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+
+    &__title {
+      @include MainText('&', $sobank-main-font, 12px, normal, 500, $sobank-dark-text-color);
+    }
+
+    &__list {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+    }
+
+    &__item {
+      width: 100%;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+
+  &__sobankRedesign {
+    display: none;
   }
 }
 
