--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -12,7 +12,7 @@
   align-items: center;
   -webkit-align-items: center;
 
-  background: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, .5);
 
   z-index: 100;
 
